# ClassMate

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile
.github/workflows/: build-binary.yml  release-on-merge.yml  super-linter.yml
src/: main.rs
src/commands/: ping.rs
