[package]
name = "ClassMate"
version = "0.2.0"
authors = ["Vianpyro"]
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
